fix mobile covid icon misalignment

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -1392,7 +1392,6 @@ button {
         &.covid-status-table {
           @media (max-width: 767px) {
             position: relative;
-            top: .3rem;
             max-height: 14px;
             width: 14px;
           }
